# libpitaya-cluster

./: .gitignore  .gitmodules  CHANGELOG.md  Gopkg.toml  LICENSE  Makefile  README.md  build-and-publish.sh  c_interop.go  cluster.c  cluster.go  cluster.h  cluster_etcd.go  cluster_grpc.go  cluster_nats.go  cluster_rpc_server.go  docker-compose.yml  package.sh  update-version.sh  update_version.py
.cursor/rules/: 00-memory-bank.mdc
.github/workflows/: build-and-release.yml  build.yml  cmake.yml  internal-publishing.yaml  release.yml
NugetOutput/: LibPitayaServerCpp.nuspec
cpp-lib/: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.py  conanfile.txt  conanprofile  gen-test-coverage.sh  run-tests-with-coverage.sh  version.txt
cpp-lib/cpprestsdk_install/: LICENSE.txt
cpp-lib/cpprestsdk_install/linux/lib/cpprestsdk/: cpprestsdk-config-version.cmake  cpprestsdk-targets-release.cmake  cpprestsdk-targets.cmake
cpp-lib/cpprestsdk_install/mac/lib/cpprestsdk/: cpprestsdk-config.cmake  cpprestsdk-targets.cmake
cpp-lib/docs/: LAME_DUCK_MODE.md
cpp-lib/include/: cluster.h  lease_keep_alive.h  pitaya.h  pitaya_cluster.h  pitaya_nats.h  semaphore.h  service_discovery.h  service_discovery_worker.h  sync_deque.h  sync_map.h  ticker.h
cpp-lib/include/pitaya/: binding_storage.h  c_wrapper.h  cluster.h  constants.h  etcd_client.h  etcd_config.h  etcd_lease_keep_alive.h  etcdv3_service_discovery.h  grpc_config.h  nats_client.h  nats_config.h  rpc_client.h  rpc_server.h  service_discovery.h  utils.h
cpp-lib/include/pitaya/cluster/: log_options.h
cpp-lib/include/pitaya/etcdv3_service_discovery/: config.h  lease_keep_alive.h  worker.h
cpp-lib/include/pitaya/grpc/: config.h  rpc_client.h  rpc_server.h
cpp-lib/include/pitaya/nats/: config.h  rpc_client.h  rpc_server.h
cpp-lib/include/pitaya/protos/: bind.grpc.pb.cc  bind.grpc.pb.h  bind.pb.cc  bind.pb.h  bind_mock.grpc.pb.h  doc.grpc.pb.cc  doc.grpc.pb.h  doc.pb.cc  doc.pb.h  doc_mock.grpc.pb.h  docmsg.grpc.pb.cc  docmsg.grpc.pb.h  docmsg.pb.cc  docmsg.pb.h  docmsg_mock.grpc.pb.h  error.grpc.pb.cc  error.grpc.pb.h  error.pb.cc  error.pb.h  error_mock.grpc.pb.h  kick.grpc.pb.cc  kick.grpc.pb.h  kick.pb.cc  kick.pb.h  kick_mock.grpc.pb.h  msg.grpc.pb.cc  msg.grpc.pb.h  msg.pb.cc  msg.pb.h  msg_mock.grpc.pb.h  pitaya.grpc.pb.cc  pitaya.grpc.pb.h  pitaya.pb.cc  pitaya.pb.h  pitaya_mock.grpc.pb.h  protodescriptor.grpc.pb.cc  protodescriptor.grpc.pb.h  protodescriptor.pb.cc  protodescriptor.pb.h  protodescriptor_mock.grpc.pb.h  (+20 more)
cpp-lib/include/pitaya/service_discovery/: config.h  lease_keep_alive.h  log_options.h  worker.h
cpp-lib/include/pitaya/utils/: semaphore.h  sync_deque.h  sync_map.h  sync_vector.h  ticker.h
cpp-lib/include/protos/: bind.pb.h  error.pb.h  kick.pb.h  pitaya.grpc.pb.cc  pitaya.grpc.pb.h  push.pb.cc  request.pb.cc  response.pb.h  session.pb.cc
cpp-lib/src/: cluster.cpp  lease_keep_alive.cpp  main.cpp  nats_rpc_client.cpp  nats_rpc_server.cpp  pitaya.cpp  pitaya_cluster.cpp  pitaya_utils.cpp  service_discovery.cpp  service_discovery_worker.cpp  string_utils.cpp  string_utils.h  ticker.cpp
cpp-lib/src/pitaya/: binding_storage.h  c_wrapper.cpp  cluster.cpp  etcd_binding_storage.cpp  etcd_binding_storage.h  etcd_client.cpp  etcd_client.h  etcd_client_v3.cpp  etcd_client_v3.h  etcd_lease_keep_alive.cpp  etcd_lease_keep_alive.h  etcdv3_service_discovery.cpp  nats_client.cpp  service_discovery.cpp  utils.cpp
cpp-lib/src/pitaya/etcdv3_service_discovery/: lease_keep_alive.cpp  worker.cpp  worker.h
cpp-lib/src/pitaya/grpc/: rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h
cpp-lib/src/pitaya/nats/: rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h
cpp-lib/src/pitaya/service_discovery/: lease_keep_alive.cpp  worker.cpp
cpp-lib/src/pitaya/utils/: grpc.cpp  grpc.h  string_utils.cpp  ticker.cpp
cpp-lib/test/: c_wrapper_test.cpp  cluster_test.cpp  doctest.h  etcdv3_service_discovery_test.cpp  grpc_client_test.cpp  grpc_server_test.cpp  lame_duck_mode_test.cpp  main_test.cpp  mock_binding_storage.h  mock_etcd_client.h  mock_nats_client.h  mock_rpc_client.h  mock_rpc_server.h  mock_service_discovery.h  nats_rpc_client_test.cpp  nats_rpc_server_test.cpp  test_common.h  ticker_test.cpp  utils_test.cpp
cpp-lib/test_package/: CMakeLists.txt  conanfile.py  example.cpp
csharp/: BaseRemote.cs  GoInterop.cs  Go_Interop.cs  Messages.cs  PitayaCluster.cs  Program.cs  RemoteMethod.cs  TestRemote.cs  myApp.csproj
csharp-example/: Program.cs  TestRemote.cs  csharp-example.sln  example.csproj
csharp-example/csharp-example/: Program.cs  csharp-example.csproj
csharp-example/remotes/: TestRemote.cs
csharp-lib/: BaseRemote.cs  GoInterop.cs  PitayaCluster.cs  Response.cs  cluster-lib.csproj  cluster-lib.sln
csharp-lib/cluster-lib/: BaseRemote.cs  GoInterop.cs  PitayaCluster.cs  PitayaException.cs  RemoteMethod.cs  cluster-lib.csproj  packages.config
csharp-lib/util/: Logger.cs
docs/: RELEASE_PROCESS.md  UBUNTU_22_04_COMPATIBILITY.md
go-server/: Gopkg.toml  go.mod  go.sum  main.go
integration-test/: CMakeLists.simple.txt  CMakeLists.txt  Makefile  README.md  TESTING_GUIDE.md  docker-compose-nats.yml  docker-compose-simple.yml  nats.conf
integration-test/scripts/: test-lame-duck.sh  validate-results.sh
integration-test/src/: client.cpp  common.cpp  common.h  responder.cpp  server.cpp  simple_test.cpp
pitaya-sharp/: .editorconfig  .gitignore  Makefile  docker-compose.yml  pitaya-sharp.sln
precompiled/: libpitaya_cluster.bundle  libpitaya_cpp.dylib  libpitaya_cpp.exp  libpitaya_cpp.lib
protos/: messages.pb.go  messages.proto
python-example/: Pipfile  README.md  example.py  example_remote.py  libpitaya_cluster.dylib  libpitaya_cpp.dylib  requirements.txt
python-lib/: README.md  c_interop.py  example.py  go_interop.py  pitaya_cluster.py  remote.py  route.py  setup.py
unity/: MY_LOG_FILE.txt  Makefile  NPitaya.nuspec
unity-example/: .gitignore  Assembly-CSharp.csproj  Assembly-CSharp.sln  NPitaya.nuspec  unity-example.sln
(+124 files in other folders)
